[gd_scene load_steps=18 format=3 uid="uid://b2nyo3byulntr"]

[ext_resource type="Texture2D" uid="uid://ca5tsmhejjxan" path="res://assests/characters/player.png" id="1_oh642"]
[ext_resource type="Script" path="res://scripts/characters/techBaron.gd" id="1_yxk8k"]
[ext_resource type="PackedScene" uid="uid://c2iv5d0i0nmuv" path="res://scenes/events/dialogue.tscn" id="3_rga5l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yxk8k"]
atlas = ExtResource("1_oh642")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbhas"]
atlas = ExtResource("1_oh642")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf57r"]
atlas = ExtResource("1_oh642")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_inili"]
atlas = ExtResource("1_oh642")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qp0r"]
atlas = ExtResource("1_oh642")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4lhr3"]
atlas = ExtResource("1_oh642")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4use"]
atlas = ExtResource("1_oh642")
region = Rect2(192, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3848"]
atlas = ExtResource("1_oh642")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4cwj"]
atlas = ExtResource("1_oh642")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qegcd"]
atlas = ExtResource("1_oh642")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_266dx"]
atlas = ExtResource("1_oh642")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_v3848"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxk8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbhas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf57r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inili")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qp0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4lhr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4use")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3848")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4cwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qegcd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_266dx")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uhgm8"]
radius = 41.01219

[sub_resource type="CircleShape2D" id="CircleShape2D_20idt"]
radius = 128.01563

[node name="techBaron" type="CharacterBody2D"]
script = ExtResource("1_yxk8k")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_v3848")
animation = &"move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8, 38)
shape = SubResource("CircleShape2D_uhgm8")

[node name="chatDetectionArea" type="Area2D" parent="."]

[node name="textCollision" type="CollisionShape2D" parent="chatDetectionArea"]
position = Vector2(-3, 17)
shape = SubResource("CircleShape2D_20idt")

[node name="Timer" type="Timer" parent="."]

[node name="Dialogue" parent="." instance=ExtResource("3_rga5l")]
offset_left = 120.0
offset_top = -297.0
offset_right = 157.0
offset_bottom = -259.0

[connection signal="body_entered" from="chatDetectionArea" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chatDetectionArea" to="." method="_on_chat_detection_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="d_finished" from="Dialogue" to="." method="_on_dialogue_d_finished"]
